MDEV-37998 (Column) CHECK constraints can cause CREATE TABLE (SELECT) queries to fail

don't copy field default values and check constraints in
CREATE ... SELECT.

CREATE ... SELECT means a table is created from a *result set*
not from some other table.

For backward compatibility, though, let's keep copying constant
default values and the "compressed" attribute.